--- a/CSS/EAMainDesign.css
+++ b/CSS/EAMainDesign.css
@@ -73,40 +73,96 @@ video {
         right: 35px;
     }
 }
-
-.container {
-    display: inline-block;
-    cursor: pointer;
-	z-index: 2;
+* {
+  margin: 0;
+  padding: 0; 
 }
 
-.bar1, .bar2, .bar3 {
-    width: 35px;
-    height: 5px;
-    background-color: #333;
-    margin: 6px 0;
-    transition: 0.4s;
-	z-index: 2;
-	position: absolute;
-    top: 5%;
-    right: 15%;
-    font-size: 60px;
+/* Icon 1 */
+
+#nav-icon1 {
+  z-index: 3;
+  width: 60px;
+  height: 45px;
+  position: relative;
+  margin: 50px auto;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
 }
 
-.change .bar1 {
-    -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
-    transform: rotate(-45deg) translate(-9px, 6px) ;
+#nav-icon1 span {
+
+  display: block;
+  position: absolute;
+  right: 5%;
+  top: 5%;
+  float: right;
+  height: 9px;
+  width: 100%;
+  background: #FEB513 ;
+  border-radius: 9px;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
 }
 
-.change .bar2 {opacity: 0;}
+#nav-icon1 span:nth-child(1) {
+  top: 0px;
+}
 
-.change .bar3 {
-    -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
-    transform: rotate(45deg) translate(-8px, -8px) ;
+#nav-icon1 span:nth-child(2) {
+  top: 18px;
+}
+
+#nav-icon1 span:nth-child(3) {
+  top: 36px;
+}
+
+#nav-icon1.open span:nth-child(1) {
+  top: 18px;
+  -webkit-transform: rotate(135deg);
+  -moz-transform: rotate(135deg);
+  -o-transform: rotate(135deg);
+  transform: rotate(135deg);
+}
+
+#nav-icon1.open span:nth-child(2) {
+  opacity: 0;
+  left: -60px;
+}
+
+#nav-icon1.open span:nth-child(3) {
+  top: 18px;
+  -webkit-transform: rotate(-135deg);
+  -moz-transform: rotate(-135deg);
+  -o-transform: rotate(-135deg);
+  transform: rotate(-135deg);
 }
 
 #ealogo 
 {
-	left: 15%;
+	top: 5%;
+	left: 5%;
 	position: absolute;
+}
+#icon-orient
+{
+	float:right;
+	right: 5%;
+	position: absolute;
+	
 }
