--- a/CSS/EAMainDesign.css
+++ b/CSS/EAMainDesign.css
@@ -175,10 +175,28 @@ video {
 }
 .header
 {
+	left: 10%;
 	text-align: center;
-	width: 100%;
+	width: 80%;
 	position: absolute;
 	background:  rgba(124, 124, 124, .5);
 	clear: both;
 	top:20%;
+	font: Impact, Haettenschweiler, Franklin Gothic Bold, Arial Black," sans-serif";
+	border-radius: 25px;
+	font-size: 24px;
+}
+.body
+{
+	left: 10%;
+	text-align: center;
+	width: 80%;
+	position: absolute;
+	background:  rgba(124, 124, 124, .5);
+	clear: both;
+	top: 30%;
+	font: Impact, Haettenschweiler, Franklin Gothic Bold, Arial Black," sans-serif";
+	border-radius: 25px;
+	font-size: 18px;
+	
 }
