About page done, with modifications necessary

--- a/CSS/EAMainDesign.css
+++ b/CSS/EAMainDesign.css
@@ -214,3 +214,16 @@ video {
 	font-size: 18px;
 	
 }
+.body3
+{
+	left: 10%;
+	width: 80%;
+	position: absolute;
+	background:  rgba(124, 124, 124, .5);
+	clear: both;
+	top: 130%;
+	font: Impact, Haettenschweiler, Franklin Gothic Bold, Arial Black," sans-serif";
+	border-radius: 25px;
+	font-size: 18px;
+	
+}
