--- a/CSS/EAMainDesign.css
+++ b/CSS/EAMainDesign.css
@@ -227,3 +227,16 @@ video {
 	font-size: 18px;
 	
 }
+.header2
+{
+	left: 10%;
+	text-align: center;
+	width: 80%;
+	position: absolute;
+	background:  rgba(124, 124, 124, .5);
+	clear: both;
+	top:58%;
+	font: Impact, Haettenschweiler, Franklin Gothic Bold, Arial Black," sans-serif";
+	border-radius: 25px;
+	font-size: 24px;
+}
